goyacc/print_1/parser/y.output

state 0
	$accept: .expression $end 

	Number  shift 19
	Print  shift 11
	Label  shift 5
	Type  shift 12
	Comment  shift 4
	Get  shift 14
	Put  shift 15
	Post  shift 16
	Delete  shift 17
	Head  shift 18
	.  error

	expression  goto 1
	assignment  goto 2
	statement  goto 3
	print_st  goto 6
	label_st  goto 7
	type_st  goto 8
	arith_st  goto 9
	network_st  goto 10
	eval_expr  goto 13

state 1
	$accept:  expression.$end 
	expression:  expression.Comment 

	$end  accept
	Comment  shift 20
	.  error


state 2
	expression:  assignment.    (1)

	.  reduce 1 (src line 29)


state 3
	expression:  statement.    (2)

	.  reduce 2 (src line 31)


state 4
	expression:  Comment.    (3)

	.  reduce 3 (src line 32)


state 5
	label_st:  Label.    (10)
	assignment:  Label.'=' String 
	assignment:  Label.'=' eval_expr 
	assignment:  Label.'=' 
	eval_expr:  Label.    (25)

	$end  reduce 10 (src line 42)
	Comment  reduce 10 (src line 42)
	'='  shift 21
	.  reduce 25 (src line 69)


state 6
	statement:  print_st.    (5)

	.  reduce 5 (src line 35)


state 7
	statement:  label_st.    (6)

	.  reduce 6 (src line 37)


state 8
	statement:  type_st.    (7)

	.  reduce 7 (src line 38)


state 9
	statement:  arith_st.    (8)
	eval_expr:  arith_st.    (26)

	$end  reduce 8 (src line 39)
	Comment  reduce 8 (src line 39)
	.  reduce 26 (src line 70)


state 10
	statement:  network_st.    (9)

	.  reduce 9 (src line 40)


state 11
	print_st:  Print.Value 
	print_st:  Print.Label 
	print_st:  Print.    (15)

	String  shift 24
	Number  shift 25
	Label  shift 23
	.  reduce 15 (src line 51)

	Value  goto 22

state 12
	type_st:  Type.Label 

	Label  shift 26
	.  error


state 13
	arith_st:  eval_expr.'+' eval_expr 
	arith_st:  eval_expr.'-' eval_expr 
	arith_st:  eval_expr.'*' eval_expr 
	arith_st:  eval_expr.'/' eval_expr 

	'+'  shift 27
	'-'  shift 28
	'*'  shift 29
	'/'  shift 30
	.  error


state 14
	network_st:  Get.String header_st body_st 

	String  shift 31
	.  error


state 15
	network_st:  Put.String header_st body_st 

	String  shift 32
	.  error


state 16
	network_st:  Post.String header_st body_st 

	String  shift 33
	.  error


state 17
	network_st:  Delete.String header_st body_st 

	String  shift 34
	.  error


state 18
	network_st:  Head.String header_st body_st 

	String  shift 35
	.  error


state 19
	eval_expr:  Number.    (24)

	.  reduce 24 (src line 67)


state 20
	expression:  expression Comment.    (4)

	.  reduce 4 (src line 33)


state 21
	assignment:  Label '='.String 
	assignment:  Label '='.eval_expr 
	assignment:  Label '='.    (19)

	String  shift 36
	Number  shift 19
	Label  shift 38
	.  reduce 19 (src line 59)

	arith_st  goto 39
	eval_expr  goto 37

state 22
	print_st:  Print Value.    (13)

	.  reduce 13 (src line 48)


state 23
	print_st:  Print Label.    (14)

	.  reduce 14 (src line 50)


state 24
	Value:  String.    (11)

	.  reduce 11 (src line 45)


state 25
	Value:  Number.    (12)

	.  reduce 12 (src line 46)


state 26
	type_st:  Type Label.    (16)

	.  reduce 16 (src line 53)


state 27
	arith_st:  eval_expr '+'.eval_expr 

	Number  shift 19
	Label  shift 38
	.  error

	arith_st  goto 39
	eval_expr  goto 40

state 28
	arith_st:  eval_expr '-'.eval_expr 

	Number  shift 19
	Label  shift 38
	.  error

	arith_st  goto 39
	eval_expr  goto 41

state 29
	arith_st:  eval_expr '*'.eval_expr 

	Number  shift 19
	Label  shift 38
	.  error

	arith_st  goto 39
	eval_expr  goto 42

state 30
	arith_st:  eval_expr '/'.eval_expr 

	Number  shift 19
	Label  shift 38
	.  error

	arith_st  goto 39
	eval_expr  goto 43

state 31
	network_st:  Get String.header_st body_st 
	header_st: .    (29)

	Header  shift 46
	.  reduce 29 (src line 77)

	header_sg  goto 45
	header_st  goto 44

state 32
	network_st:  Put String.header_st body_st 
	header_st: .    (29)

	Header  shift 46
	.  reduce 29 (src line 77)

	header_sg  goto 45
	header_st  goto 47

state 33
	network_st:  Post String.header_st body_st 
	header_st: .    (29)

	Header  shift 46
	.  reduce 29 (src line 77)

	header_sg  goto 45
	header_st  goto 48

state 34
	network_st:  Delete String.header_st body_st 
	header_st: .    (29)

	Header  shift 46
	.  reduce 29 (src line 77)

	header_sg  goto 45
	header_st  goto 49

state 35
	network_st:  Head String.header_st body_st 
	header_st: .    (29)

	Header  shift 46
	.  reduce 29 (src line 77)

	header_sg  goto 45
	header_st  goto 50

state 36
	assignment:  Label '=' String.    (17)

	.  reduce 17 (src line 56)


state 37
	assignment:  Label '=' eval_expr.    (18)
	arith_st:  eval_expr.'+' eval_expr 
	arith_st:  eval_expr.'-' eval_expr 
	arith_st:  eval_expr.'*' eval_expr 
	arith_st:  eval_expr.'/' eval_expr 

	'+'  shift 27
	'-'  shift 28
	'*'  shift 29
	'/'  shift 30
	.  reduce 18 (src line 58)


state 38
	eval_expr:  Label.    (25)

	.  reduce 25 (src line 69)


state 39
	eval_expr:  arith_st.    (26)

	.  reduce 26 (src line 70)


state 40
	arith_st:  eval_expr.'+' eval_expr 
	arith_st:  eval_expr '+' eval_expr.    (20)
	arith_st:  eval_expr.'-' eval_expr 
	arith_st:  eval_expr.'*' eval_expr 
	arith_st:  eval_expr.'/' eval_expr 

	'*'  shift 29
	'/'  shift 30
	.  reduce 20 (src line 61)


state 41
	arith_st:  eval_expr.'+' eval_expr 
	arith_st:  eval_expr.'-' eval_expr 
	arith_st:  eval_expr '-' eval_expr.    (21)
	arith_st:  eval_expr.'*' eval_expr 
	arith_st:  eval_expr.'/' eval_expr 

	'*'  shift 29
	'/'  shift 30
	.  reduce 21 (src line 63)


state 42
	arith_st:  eval_expr.'+' eval_expr 
	arith_st:  eval_expr.'-' eval_expr 
	arith_st:  eval_expr.'*' eval_expr 
	arith_st:  eval_expr '*' eval_expr.    (22)
	arith_st:  eval_expr.'/' eval_expr 

	.  reduce 22 (src line 64)


state 43
	arith_st:  eval_expr.'+' eval_expr 
	arith_st:  eval_expr.'-' eval_expr 
	arith_st:  eval_expr.'*' eval_expr 
	arith_st:  eval_expr.'/' eval_expr 
	arith_st:  eval_expr '/' eval_expr.    (23)

	.  reduce 23 (src line 65)


state 44
	network_st:  Get String header_st.body_st 
	body_st: .    (31)

	Body  shift 52
	.  reduce 31 (src line 80)

	body_st  goto 51

state 45
	header_st:  header_sg.    (28)
	header_st:  header_sg.header_sg 

	Header  shift 46
	.  reduce 28 (src line 75)

	header_sg  goto 53

state 46
	header_sg:  Header.String 

	String  shift 54
	.  error


state 47
	network_st:  Put String header_st.body_st 
	body_st: .    (31)

	Body  shift 52
	.  reduce 31 (src line 80)

	body_st  goto 55

state 48
	network_st:  Post String header_st.body_st 
	body_st: .    (31)

	Body  shift 52
	.  reduce 31 (src line 80)

	body_st  goto 56

state 49
	network_st:  Delete String header_st.body_st 
	body_st: .    (31)

	Body  shift 52
	.  reduce 31 (src line 80)

	body_st  goto 57

state 50
	network_st:  Head String header_st.body_st 
	body_st: .    (31)

	Body  shift 52
	.  reduce 31 (src line 80)

	body_st  goto 58

state 51
	network_st:  Get String header_st body_st.    (34)

	.  reduce 34 (src line 85)


state 52
	body_st:  Body.String 
	body_st:  Body.Json '(' String ')' 

	String  shift 59
	Json  shift 60
	.  error


state 53
	header_st:  header_sg header_sg.    (30)

	.  reduce 30 (src line 78)


state 54
	header_sg:  Header String.    (27)

	.  reduce 27 (src line 72)


state 55
	network_st:  Put String header_st body_st.    (35)

	.  reduce 35 (src line 87)


state 56
	network_st:  Post String header_st body_st.    (36)

	.  reduce 36 (src line 88)


state 57
	network_st:  Delete String header_st body_st.    (37)

	.  reduce 37 (src line 89)


state 58
	network_st:  Head String header_st body_st.    (38)

	.  reduce 38 (src line 90)


state 59
	body_st:  Body String.    (32)

	.  reduce 32 (src line 82)


state 60
	body_st:  Body Json.'(' String ')' 

	'('  shift 61
	.  error


state 61
	body_st:  Body Json '('.String ')' 

	String  shift 62
	.  error


state 62
	body_st:  Body Json '(' String.')' 

	')'  shift 63
	.  error


state 63
	body_st:  Body Json '(' String ')'.    (33)

	.  reduce 33 (src line 83)


25 terminals, 14 nonterminals
39 grammar rules, 64/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
63 working sets used
memory: parser 35/240000
1 extra closures
61 shift entries, 5 exceptions
28 goto entries
8 entries saved by goto default
Optimizer space used: output 68/240000
68 table entries, 0 zero
maximum spread: 25, maximum offset: 50
